logs/offboard_pkg/build.make.638.log.stderr
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: In constructor ‘MultiBody::MultiBody()’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:72:53: error: no matching function for call to ‘std::basic_ofstream<char>::basic_ofstream(const char [15], const seekdir&)’
   72 |     ofstream WriteLogFile("local_pos0.txt", ios::end);//追加写入
      |                                                     ^
In file included from /usr/include/GeographicLib/Geoid.hpp:14,
                 from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:11,
                 from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.h:1,
                 from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:1:
/usr/include/c++/9/fstream:850:7: note: candidate: ‘std::basic_ofstream<_CharT, _Traits>::basic_ofstream(std::basic_ofstream<_CharT, _Traits>&&) [with _CharT = char; _Traits = std::char_traits<char>]’
  850 |       basic_ofstream(basic_ofstream&& __rhs)
      |       ^~~~~~~~~~~~~~
/usr/include/c++/9/fstream:850:7: note:   candidate expects 1 argument, 2 provided
/usr/include/c++/9/fstream:825:7: note: candidate: ‘std::basic_ofstream<_CharT, _Traits>::basic_ofstream(const string&, std::ios_base::openmode) [with _CharT = char; _Traits = std::char_traits<char>; std::string = std::__cxx11::basic_string<char>; std::ios_base::openmode = std::_Ios_Openmode]’
  825 |       basic_ofstream(const std::string& __s,
      |       ^~~~~~~~~~~~~~
/usr/include/c++/9/fstream:826:27: note:   no known conversion for argument 2 from ‘const seekdir’ {aka ‘const std::_Ios_Seekdir’} to ‘std::ios_base::openmode’ {aka ‘std::_Ios_Openmode’}
  826 |        ios_base::openmode __mode = ios_base::out)
      |        ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/9/fstream:790:7: note: candidate: ‘std::basic_ofstream<_CharT, _Traits>::basic_ofstream(const char*, std::ios_base::openmode) [with _CharT = char; _Traits = std::char_traits<char>; std::ios_base::openmode = std::_Ios_Openmode]’
  790 |       basic_ofstream(const char* __s,
      |       ^~~~~~~~~~~~~~
/usr/include/c++/9/fstream:791:27: note:   no known conversion for argument 2 from ‘const seekdir’ {aka ‘const std::_Ios_Seekdir’} to ‘std::ios_base::openmode’ {aka ‘std::_Ios_Openmode’}
  791 |        ios_base::openmode __mode = ios_base::out)
      |        ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/9/fstream:779:7: note: candidate: ‘std::basic_ofstream<_CharT, _Traits>::basic_ofstream() [with _CharT = char; _Traits = std::char_traits<char>]’
  779 |       basic_ofstream(): __ostream_type(), _M_filebuf()
      |       ^~~~~~~~~~~~~~
/usr/include/c++/9/fstream:779:7: note:   candidate expects 0 arguments, 2 provided
make[2]: *** [CMakeFiles/offboard_pkg_node2.dir/build.make:89: CMakeFiles/offboard_pkg_node2.dir/src/MultiBody.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:231: CMakeFiles/offboard_pkg_node2.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: In constructor ‘MultiBody::MultiBody()’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:72:53: error: no matching function for call to ‘std::basic_ofstream<char>::basic_ofstream(const char [15], const seekdir&)’
   72 |     ofstream WriteLogFile("local_pos0.txt", ios::end);//追加写入
      |                                                     ^
In file included from /usr/include/GeographicLib/Geoid.hpp:14,
                 from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:11,
                 from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.h:1,
                 from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:1:
/usr/include/c++/9/fstream:850:7: note: candidate: ‘std::basic_ofstream<_CharT, _Traits>::basic_ofstream(std::basic_ofstream<_CharT, _Traits>&&) [with _CharT = char; _Traits = std::char_traits<char>]’
  850 |       basic_ofstream(basic_ofstream&& __rhs)
      |       ^~~~~~~~~~~~~~
/usr/include/c++/9/fstream:850:7: note:   candidate expects 1 argument, 2 provided
/usr/include/c++/9/fstream:825:7: note: candidate: ‘std::basic_ofstream<_CharT, _Traits>::basic_ofstream(const string&, std::ios_base::openmode) [with _CharT = char; _Traits = std::char_traits<char>; std::string = std::__cxx11::basic_string<char>; std::ios_base::openmode = std::_Ios_Openmode]’
  825 |       basic_ofstream(const std::string& __s,
      |       ^~~~~~~~~~~~~~
/usr/include/c++/9/fstream:826:27: note:   no known conversion for argument 2 from ‘const seekdir’ {aka ‘const std::_Ios_Seekdir’} to ‘std::ios_base::openmode’ {aka ‘std::_Ios_Openmode’}
  826 |        ios_base::openmode __mode = ios_base::out)
      |        ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/9/fstream:790:7: note: candidate: ‘std::basic_ofstream<_CharT, _Traits>::basic_ofstream(const char*, std::ios_base::openmode) [with _CharT = char; _Traits = std::char_traits<char>; std::ios_base::openmode = std::_Ios_Openmode]’
  790 |       basic_ofstream(const char* __s,
      |       ^~~~~~~~~~~~~~
/usr/include/c++/9/fstream:791:27: note:   no known conversion for argument 2 from ‘const seekdir’ {aka ‘const std::_Ios_Seekdir’} to ‘std::ios_base::openmode’ {aka ‘std::_Ios_Openmode’}
  791 |        ios_base::openmode __mode = ios_base::out)
      |        ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/9/fstream:779:7: note: candidate: ‘std::basic_ofstream<_CharT, _Traits>::basic_ofstream() [with _CharT = char; _Traits = std::char_traits<char>]’
  779 |       basic_ofstream(): __ostream_type(), _M_filebuf()
      |       ^~~~~~~~~~~~~~
/usr/include/c++/9/fstream:779:7: note:   candidate expects 0 arguments, 2 provided
make[2]: *** [CMakeFiles/offboard_pkg_node3.dir/build.make:89: CMakeFiles/offboard_pkg_node3.dir/src/MultiBody.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:204: CMakeFiles/offboard_pkg_node3.dir/all] Error 2
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp: In constructor ‘MultiBody::MultiBody()’:
/home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:72:53: error: no matching function for call to ‘std::basic_ofstream<char>::basic_ofstream(const char [15], const seekdir&)’
   72 |     ofstream WriteLogFile("local_pos0.txt", ios::end);//追加写入
      |                                                     ^
In file included from /usr/include/GeographicLib/Geoid.hpp:14,
                 from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/TaskManager.h:11,
                 from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.h:1,
                 from /home/tutu/FControl/mavros_ws/src/offboard_pkg/src/MultiBody.cpp:1:
/usr/include/c++/9/fstream:850:7: note: candidate: ‘std::basic_ofstream<_CharT, _Traits>::basic_ofstream(std::basic_ofstream<_CharT, _Traits>&&) [with _CharT = char; _Traits = std::char_traits<char>]’
  850 |       basic_ofstream(basic_ofstream&& __rhs)
      |       ^~~~~~~~~~~~~~
/usr/include/c++/9/fstream:850:7: note:   candidate expects 1 argument, 2 provided
/usr/include/c++/9/fstream:825:7: note: candidate: ‘std::basic_ofstream<_CharT, _Traits>::basic_ofstream(const string&, std::ios_base::openmode) [with _CharT = char; _Traits = std::char_traits<char>; std::string = std::__cxx11::basic_string<char>; std::ios_base::openmode = std::_Ios_Openmode]’
  825 |       basic_ofstream(const std::string& __s,
      |       ^~~~~~~~~~~~~~
/usr/include/c++/9/fstream:826:27: note:   no known conversion for argument 2 from ‘const seekdir’ {aka ‘const std::_Ios_Seekdir’} to ‘std::ios_base::openmode’ {aka ‘std::_Ios_Openmode’}
  826 |        ios_base::openmode __mode = ios_base::out)
      |        ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/9/fstream:790:7: note: candidate: ‘std::basic_ofstream<_CharT, _Traits>::basic_ofstream(const char*, std::ios_base::openmode) [with _CharT = char; _Traits = std::char_traits<char>; std::ios_base::openmode = std::_Ios_Openmode]’
  790 |       basic_ofstream(const char* __s,
      |       ^~~~~~~~~~~~~~
/usr/include/c++/9/fstream:791:27: note:   no known conversion for argument 2 from ‘const seekdir’ {aka ‘const std::_Ios_Seekdir’} to ‘std::ios_base::openmode’ {aka ‘std::_Ios_Openmode’}
  791 |        ios_base::openmode __mode = ios_base::out)
      |        ~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~
/usr/include/c++/9/fstream:779:7: note: candidate: ‘std::basic_ofstream<_CharT, _Traits>::basic_ofstream() [with _CharT = char; _Traits = std::char_traits<char>]’
  779 |       basic_ofstream(): __ostream_type(), _M_filebuf()
      |       ^~~~~~~~~~~~~~
/usr/include/c++/9/fstream:779:7: note:   candidate expects 0 arguments, 2 provided
make[2]: *** [CMakeFiles/offboard_pkg_node.dir/build.make:89: CMakeFiles/offboard_pkg_node.dir/src/MultiBody.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:393: CMakeFiles/offboard_pkg_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
